src/test/resources/testcases/invalid/variables/const_call.tc

int f() { return 1; }
const int x = f();
int main() { return x; }

